2016-Oct-31 ddamiani    Tag V08-06-18.  Added analog input bld for SXR. Added new ControlsCameraConfigV1 ddl type for IOC cameras.
2016-Oct-17 ddamiani    Tag V08-06-17.  Fix bug in BldDataBeamMonitorV1 so it reflects the actual recorded data
2016-Sep-30 ddamiani    Tag V08-06-16.  Update BldDataBeamMonitor type to be BldDataBeamMonitorV1.
2016-Sep-27 ddamiani    Tag V08-06-15.  Added BldDataUsdUsbV1 for shared UsdUsb encoder boxes and minor fixes for BldDataBeamMonitor type.
2016-Jun-14 ddamiani    Tag V08-06-13.  Adds entries in BldInfo for the new spectrometer bld for the profile monitor cameras in MFX.
2016-Jun-10 ddamiani    Tag V08-06-12.  Fix Partition::ConfigV2 so that helper methods can be used on bits higher than 255.
2016-Jun-09 ddamiani    Tag V08-06-11.  Added Partition::ConfigV2 to support bld masks with an arbitrary number of bits.
2016-Jun-02 ddamiani    Tag V08-06-10.  Fix for BldDataEOrbitsV0 which removes the value_type tag from the ddl.
2016-May-23 ddamiani    Tag V08-06-09.  Added BldDataEOrbitsV0 electron beam orbit parameters.
2016-Apr-15 ddamiani    Tag V08-06-08.  Added a ConfigV2 for the Andor cameras with support of crop mode.
2016-Mar-31 ddamiani    Tag V08-06-06.  Added a LeCroy type to DetInfo.
2016-Mar-29 ddamiani    Tag V08-06-05.  Added a constructor to Generic1D::DataV0.
2016-Mar-28 ddamiani    Tag V08-06-04.  Fixed a bug with string names of the Generic1DConfig and Generic1DData types.
2016-Mar-28 ddamiani    Tag V08-06-03.  Added FexConfigV1 and FexDataV1 for usdusb encoders. Derived from psddldata V01-00-38.
2016-Feb-05 ddamiani    Tag V08-06-01.  Fixed bug with TypeId and DetInfo for multi-ccd Andor cameras. Derived from psddldata V01-00-36.
2016-Feb-04 ddamiani    Tag V08-06-00.  Added ConfigV1 and FrameV1 for multi-ccd Andor cameras. Derived from psddldata V01-00-36.
2015-Apr-30 ddamiani    Tag V08-02-07.  Added BldDataAnalogInputV1. Derived from psddldata V01-00-27.