@@ -1,0 +1,14 @@
+
+// *** Do not edit this file, it is auto-generated ***
+
+#include "pdsdata/psddl/archon.ddl.h"
+
+#include <iostream>
+namespace Pds {
+namespace Archon {
+ConfigV1::ConfigV1(const char* arg__config)
+{
+  if (arg__config) std::copy(arg__config, arg__config+(256), &_config[0]);
+}
+} // namespace Archon
+} // namespace Pds
