@@ -118,6 +118,7 @@ namespace Pds {
       Id_EOrbits,
       Id_SharedUsdUsb,
       Id_ControlsCameraConfig,
+      Id_ArchonConfig,
       NumberOf};
     enum { VCompressed = 0x8000 };
 
