@@ -88,6 +88,7 @@ bool     TypeId::is_configuration() const
       Id_Generic1DConfig,
       Id_UsdUsbFexConfig,
       Id_ControlsCameraConfig,
+      Id_ArchonConfig,
     };
   const unsigned nconfigtypes = sizeof(_configuration_types)/sizeof(Type);
   Type t = id();
@@ -206,6 +207,7 @@ const char* TypeId::name(Type type)
     "EOrbits",                 // 103
     "SharedUsdUsb",            // 104
     "ControlsCameraConfig",    // 105
+    "ArchonConfig",            // 106
   };
    const char* p = (type < NumberOf ? _names[type] : "-Invalid-");
    if (!p) p = "-Unnamed-";
